Java17: code cleanup